feat: added plugin and test