@@ -11,11 +11,23 @@ kotlin {
     jvmToolchain(21)
 }
 
+dependencies {
+    testImplementation(libs.junit.jupiter)
+    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+}
+
+tasks.named<Test>("test") {
+    useJUnitPlatform()
+    jvmArgs(
+        "--add-opens=java.base/java.lang=ALL-UNNAMED",
+        "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+        "--add-opens=java.base/java.util=ALL-UNNAMED"
+    )
+}
+
 gradlePlugin {
-    plugins {
-        create("xmlFilename") {
-            id = "com.adyen.junit-plugin"
-            implementationClass = "com.adyen.junitplugin.JUnitFilenamePlugin"
-        }
+    val plugin by plugins.creating {
+        id = "com.adyen.junit-plugin"
+        implementationClass = "com.adyen.junitplugin.JUnitFilenamePlugin"
     }
 }
